tests/ui/consts/const_in_pattern/non_structural_with_escaping_bounds.stderr
error: constant of non-structural type `O<dyn for<'a> Fn(Box<dyn Fn(&'a u8)>)>` in a pattern
  --> $DIR/non_structural_with_escaping_bounds.rs:13:9
   |
LL | const C: O<dyn for<'a> Fn(Box<dyn Fn(&'a u8)>)> = O::None;
   | ----------------------------------------------- constant defined here
...
LL |         C => (),
   |         ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 1 previous error

